--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       <li>
         <img src="images/img8.jpg" alt="online-courses" width="360">
         <h3 class="ourteam-h">Online Courses</h3>
-        <p class="ourteam-p">Marketing</p>
+        <p class="ourteam-p">Marketing style</p>
       </li>
     </ul>
   </section>
