--- a/index.html
+++ b/index.html
@@ -53,32 +53,34 @@
   </section>
 
 
-<section>
-    <h2>About us</h2>
-
-    <ul>
-        <li>
+<section class="about-us">
+  <div class="container"></div>
+    <h2 class="visually-hidden">About us</h2>
+   
+     <ul class="about-ul">
+        <li class="about-li">
         <h3 class="li-h">Strategy</h3>
         <p class="li-p">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
         </li>
 
-        <li>
+        <li class="about-li">
            <h3 class="li-h">Punctuality</h3>
            <p class="li-p">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
        </li>
 
-       <li>
+       <li class="about-li">
            <h3 class="li-h">Diligence</h3>
            <p class="li-p">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
         </li>
        
-        <li>
+        <li class="about-li">
            <h3 class="li-h">Technologies</h3>
            <p class="li-p">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
 
 
         </li>
-    </ul>
+     </ul>
+    </div>
 </section>
   <section class="third-sec">
 <h2 class="ts-h">Our Team</h2>
