--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 
 <section class="about-us">
-  <div class="container"></div>
+  <div class="container">
     <h2 class="visually-hidden">About us</h2>
    
      <ul class="about-ul">
