--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <main>
 
 <section class="first-section"> 
-    <div class="container">
+    <div class="container first-section-container">
     <h1 class="fshh">Effective Solutions for Your Business</h1>
     <button type="button" class="fs-button">Order Service</button>
   </div>
@@ -59,7 +59,7 @@
    
      <ul class="about-ul">
         <li class="about-li">
-        <h3 class="li-h">Strategy</h3>
+        <h3 class="li-h ikinci-hüç">Strategy</h3>
         <p class="li-p">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
         </li>
 
@@ -83,9 +83,10 @@
     </div>
 </section>
   <section class="third-sec">
-<h2 class="ts-h">Our Team</h2>
+<div class="container">
+    <h2 class="ts-h">Our Team</h2>
         
-<ul>
+<ul class="team-ul">
     <li class="our-team">
         <img src="./images/img.jpg" alt="team-member" width="264">
         <h3 class="ourteam-h">Mark Guerrero</h3>
@@ -110,6 +111,7 @@
     <p class="ourteam-p">UI Designer</p>
 </li>
 </ul> 
+</div>
 </section>
 <section>
     <h2 class="our-port">Our Portfolio</h2>
