--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
    
      <ul class="about-ul">
         <li class="about-li">
-        <h3 class="li-h ikinci-hüç">Strategy</h3>
+        <h3 class="li-h">Strategy</h3>
         <p class="li-p">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
         </li>
 
@@ -83,32 +83,38 @@
     </div>
 </section>
   <section class="third-sec">
-<div class="container">
+     <div class="container">
     <h2 class="ts-h">Our Team</h2>
         
-<ul class="team-ul">
-    <li class="our-team">
+  <ul class="team-ul">
+    <li class="our-team ikinci-düzenleme">
         <img src="./images/img.jpg" alt="team-member" width="264">
-        <h3 class="ourteam-h">Mark Guerrero</h3>
-        <p class="ourteam-p">Product Designer</p>
+      <div class="name-job">
+        <h3 class="ourteam-h name-job-h">Mark Guerrero</h3>
+        <p class="ourteam-p name-job-p">Product Designer</p>
+      </div>
 </li>
 <li class="our-team"> 
-    <img src="./images/img1.jpg" alt="team-member" width="264">
-    <h3 class="ourteam-h">Tom Ford</h3>
-    <p class="ourteam-p">Frontend Developer
-    </p>
+     <img src="./images/img1.jpg" alt="team-member" width="264">
+    <div class="name-job">
+     <h3 class="ourteam-h name-job-h">Tom Ford</h3>
+     <p class="ourteam-p name-job-p">Frontend Developer</p>
+    </div>
 </li>
 <li class="our-team">
       
-     <img src="./images/img2.jpg" alt="team-member">
-     <h3 class="ourteam-h">Camila Garcia</h3>
-     <p class="ourteam-p">Marketing</p>
-
+      <img src="./images/img2.jpg" alt="team-member">
+    <div class="name-job">
+      <h3 class="ourteam-h name-job-h">Camila Garcia</h3>
+      <p class="ourteam-p name-job-p">Marketing</p>
+    </div>
 </li>
 <li class="our-team">
-    <img src="./images/img3.jpg" alt="team-member" width="264">
-    <h3 class="ourteam-h">Daniel Wilson</h3>
-    <p class="ourteam-p">UI Designer</p>
+      <img src="./images/img3.jpg" alt="team-member" width="264">
+      <div class="name-job">
+      <h3 class="ourteam-h name-job-h">Daniel Wilson</h3>
+      <p class="ourteam-p name-job-p">UI Designer</p>
+    </div>
 </li>
 </ul> 
 </div>
