--- a/index.html
+++ b/index.html
@@ -94,14 +94,14 @@
         <p class="ourteam-p name-job-p">Product Designer</p>
       </div>
 </li>
-<li class="our-team"> 
+<li class="our-team ikinci-düzenleme"> 
      <img src="./images/img1.jpg" alt="team-member" width="264">
     <div class="name-job">
      <h3 class="ourteam-h name-job-h">Tom Ford</h3>
      <p class="ourteam-p name-job-p">Frontend Developer</p>
     </div>
 </li>
-<li class="our-team">
+<li class="our-team ikinci-düzenleme">
       
       <img src="./images/img2.jpg" alt="team-member">
     <div class="name-job">
@@ -109,7 +109,7 @@
       <p class="ourteam-p name-job-p">Marketing</p>
     </div>
 </li>
-<li class="our-team">
+<li class="our-team ikinci-düzenleme">
       <img src="./images/img3.jpg" alt="team-member" width="264">
       <div class="name-job">
       <h3 class="ourteam-h name-job-h">Daniel Wilson</h3>
