--- a/index.html
+++ b/index.html
@@ -119,51 +119,66 @@
 </ul> 
 </div>
 </section>
-<section>
-    <h2 class="our-port">Our Portfolio</h2>
-    <ul>
-      <li>
+<section class="port-section">
+  <div class="container"> 
+   <h2 class="our-port ikinci-hiki">Our Portfolio</h2>
+    <ul class="port-ul">
+      <li class="port-li">
         <img src="images/img4.jpg" alt="banking-app" width="360">
-        <h3 class="ourteam-h">Banking App</h3>
+        <div class="app-do">  
+        <h3 class="ourteam-h ">Banking App</h3>
         <p class="ourteam-p">App</p>
+        </div>
       </li>
-      <li>
+      <li class="port-li">
         <img src="images/img5.jpg" alt="cashless-payment" width="360">
+        <div class="app-do">
         <h3 class="ourteam-h">Cashless Payment</h3>
         <p class="ourteam-p">Marketing</p>
+      </div>
       </li>
-      <li>
-        <img src="images/img6.jpg" alt="meditation-app" width="360">
-        <h3 class="ourteam-h">Meditation App</h3>
-        <p class="ourteam-p">App</p>
+      <li class="port-li">
+          <img src="images/img6.jpg" alt="meditation-app" width="360">
+        <div class="app-do">
+          <h3 class="ourteam-h">Meditation App</h3>
+          <p class="ourteam-p">App</p>
+        </div>
       </li>
-      <li>
+      <li class="port-li">
         <img src="images/img7.jpg" alt="taxi-service" width="360">
-        <h3 class="ourteam-h">Taxi Service</h3>
+        <div class="app-do">
+        <h3 class="ourteam-h ">Taxi Service</h3>
         <p class="ourteam-p">Marketing</p>
+      </div>
       </li>
-      <li>
+      <li class="port-li">
         <img src="images/imgson.jpg" alt="screen-illustrations" width="360">
+        <div class="app-do">
         <h3 class="ourteam-h">Screen Illustrations</h3>
         <p class="ourteam-p">Design</p>
+      </div>
       </li>
-      <li>
+      <li class="port-li">
         <img src="images/img8.jpg" alt="online-courses" width="360">
+        <div class="app-do">
         <h3 class="ourteam-h">Online Courses</h3>
         <p class="ourteam-p">Marketing style</p>
+        </div>   
       </li>
     </ul>
+    </div>
   </section>
   
 
 
 </main>
 <footer class="footer">
-  <a href="./index.html" class="logo"
+  <div class="container">
+  <a href="./index.html" class="logo footer-üc"
   >Web<span class="logo-footer">Studio</span></a>
 
-    <p class="footer-p">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-
+    <p class="footer-p footer-p-üc">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+  </div>
 </footer>
 </body>
 </html>
