--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 </section>
 <section class="port-section">
   <div class="container"> 
-   <h2 class="our-port ikinci-hiki">Our Portfolio</h2>
+   <h2 class="our-port ikinci-iki">Our Portfolio</h2>
     <ul class="port-ul">
       <li class="port-li">
         <img src="images/img4.jpg" alt="banking-app" width="360">
